[gd_scene load_steps=9 format=2]

[ext_resource path="res://game_ui/greeting/Greeting.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/title_screen/bg_color.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/default_theme/font_amble_regular_40.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/gui/default_theme/line_edit.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/default_theme/LineEdit.tscn" type="PackedScene" id=5]
[ext_resource path="res://game_ui/greeting/EnterButton.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]

resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackgroundColor:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 6.5, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Greeting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundColor" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -430.0
margin_top = -99.5
margin_right = 430.0
margin_bottom = 99.5
custom_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 861.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.101961, 0.101961, 0.101961, 1 )
text = "Your Character Name"
align = 1

[node name="PlayerName" type="TextureRect" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 861.0
margin_bottom = 190.0
texture = ExtResource( 4 )

[node name="LineEdit" parent="VBoxContainer/PlayerName" instance=ExtResource( 5 )]
margin_left = 50.0
margin_top = 20.0
margin_right = -50.0
margin_bottom = -20.0
custom_colors/selection_color = Color( 0.992157, 0.937255, 0.729412, 1 )
custom_colors/cursor_color = Color( 0.992157, 0.937255, 0.729412, 1 )
custom_colors/font_color_selected = Color( 0.101961, 0.101961, 0.101961, 1 )
custom_colors/font_color = Color( 0.992157, 0.937255, 0.729412, 1 )
placeholder_text = "Type here..."

[node name="EnterButton" parent="VBoxContainer/PlayerName" instance=ExtResource( 6 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -36.5
margin_right = -23.0
margin_bottom = 36.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )

